swaggerに書いた機能は実装した．
