# swagger-1.yml
@@ -37,23 +37,26 @@ paths:
       summary: "書籍情報を強制更新"
       parameters:
         - in: path
-          name: "ISBN"
+          name: "isbn"
           required: true
           schema:
             type: string
+      responses:
+        "200":
+          description: "OK"
 
   /status:
     get:
       summary: "読了状態を取得する"
       parameters:
         - in: query
-          name: "userID"
+          name: "uid"
           required: true
           schema:
             type: string
 
         - in: query
-          name: "ISBN"
+          name: "isbn"
           required: true
           schema:
             type: string
@@ -73,7 +76,7 @@ paths:
       summary: "読了状態を記録する"
       parameters:
         - in: query
-          name: "ISBN"
+          name: "isbn"
           required: true
           schema:
             type: string
@@ -88,7 +91,7 @@ paths:
             - unread
             - wish
         - in: query
-          name: "Token"
+          name: "uid"
           required: true
           schema:
             type: string
@@ -97,12 +100,12 @@ paths:
           description: "OK. Recorded."
         "403":
           description: "Invalid Token."
-  /user/{userID}:
+  /user/{uid}:
     get:
       summary: "読んだ本の一覧"
       parameters:
         - in: path
-          name: "userID"
+          name: "uid"
           required: true
           schema:
             type: string
@@ -115,3 +118,55 @@ paths:
             - "reading"
             - "unread"
             - "wish"
+      responses:
+        "200":
+          description: "Found"
+          content:
+            application/json:
+              schema:
+                type: "object"
+                example:
+                  - "isbn": "9784873117386"
+                    "uid": "neso"
+                    "status": "read"
+                  - "isbn": "9784774183886"
+                    "uid": "neso"
+                    "status": "unread"
+        "404":
+          description: "Not Found"
+
+  /search:
+    get:
+      summary: "書名から検索してISBNの一覧を表示する"
+      parameters:
+        - in: query
+          required: true
+          name: title
+          schema:
+            type: string
+      responses:
+        "200":
+          description: "Search done"
+          content:
+            application/json:
+              schema:
+                type: "object"
+                example:
+                  - "author": "Lubanovic, Bill"
+                    "isbn": "9784873117386"
+                    "permalink": "https://iss.ndl.go.jp/books/R100000002-I026914699-00"
+                    "publisher": "オライリー・ジャパン"
+                    "series": ""
+                    "title": "入門Python 3"
+                    "volume": ""
+
+                  - "author": "中久喜, 健司"
+                    "isbn": "9784774183886"
+                    "permalink": "https://iss.ndl.go.jp/books/R100000074-I000692947-00"
+                    "publisher": "技術評論社"
+                    "series": ""
+                    "title": "科学技術計算のためのPython入門"
+                    "volume": "1"
+
+        "404":
+          description: "search result none"
